Add Thread Prediction feature manually